# boltons

./: .gitattributes.txt  README.md  pyproject.toml
src/boltons_practical/: __init__.py  dictutils.py  fileutils.py  functional.py  iterutils.py
src/boltons_practical.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dictutils.py  test_fileutils.py  test_functional.py  test_iterutils.py
